SET(LOKI_VERSION 0.1.0)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)

FIND_PACKAGE(deal.II 9.1 REQUIRED HINTS ${DEAL_II_DIR} $ENV{DEAL_II_DIR})

DEAL_II_INITIALIZE_CACHED_VARIABLES()
DEAL_II_QUERY_GIT_INFORMATION()

IF(CMAKE_CXX_COMPILER MATCHES "clang")
  SET(DEAL_II_CXX_FLAGS "${DEAL_II_CXX_FLAGS} -Xclang -fcolor-diagnostics -Qunused-arguments")
ENDIF()

PROJECT(loki CXX)

IF(POLICY CMP0042)
  CMAKE_POLICY(SET CMP0042 NEW)
ENDIF()

ADD_SUBDIRECTORY(grendel)
ADD_SUBDIRECTORY(loki)
