INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/loki
  ${CMAKE_SOURCE_DIR}/grendel
  )


ADD_EXECUTABLE(loki
  loki.cc
  simpleloop.cc
  )
DEAL_II_SETUP_TARGET(loki)
TARGET_LINK_LIBRARIES(loki grendel)

SET_PROPERTY(TARGET loki
  PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/run
  )

SET_PROPERTY(TARGET loki APPEND PROPERTY COMPILE_DEFINITIONS
  CMAKE_BUILD_TYPE="${CMAKE_BUILD_TYPE}"
  LOKI_VERSION="${LOKI_VERSION}"
  LOKI_GIT_REVISION="${GIT_REVISION}"
  LOKI_GIT_SHORTREV="${GIT_SHORTREV}"
  )
